# Aegisub

./: .gitignore  CMakeLists.txt  README.md  meson.build  meson_options.txt
.github/workflows/: ci.yml
automation/: meson.build
po/: aegisub.pot  ar.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  es.po  eu.po  fa.po  fi.po  fr_FR.po  gl.po  hu.po  id.po  it.po  ja.po  ko.po  make_pot.sh  nl.po  pl.po  pt_BR.po  pt_PT.po  ru.po  sr_RS.po  sr_RS@latin.po  uk_UA.po  vi.po  zh_CN.po  zh_TW.po
src/: ass_dialogue.h  ass_file.cpp  ass_file.h  ass_parser.cpp  ass_style.cpp  async_video_provider.cpp  async_video_provider.h  audio_box.cpp  audio_box.h  audio_player.cpp  audio_player_alsa.cpp  audio_player_dsound.cpp  audio_player_dsound2.cpp  audio_player_openal.cpp  audio_player_oss.cpp  audio_player_portaudio.cpp  audio_player_portaudio.h  audio_player_pulse.cpp  audio_player_xaudio2.cpp  audio_provider_bestsource.cpp  audio_provider_factory.cpp  audio_provider_ffmpegsource.cpp  audio_provider_vs.cpp  audio_renderer_spectrum.cpp  auto4_base.cpp  auto4_base.h  auto4_lua.cpp  auto4_lua.h  auto4_lua_assfile.cpp  auto4_lua_dialog.cpp  base_grid.cpp  base_grid.h  bestsource_common.cpp  bestsource_common.h  context.cpp  dialog_attachments.cpp  dialog_colorpicker.cpp  dialog_dummy_video.cpp  dialog_fonts_collector.cpp  dialog_progress.cpp  (+64 more)
src/command/: edit.cpp  (+8 more)
subprojects/: bestsource.wrap  dav1d.wrap  ffmpeg.wrap  ffms2.wrap  harfbuzz.wrap  jansson.wrap  vapoursynth.wrap  wxWidgets-master.wrap  wxWidgets.wrap
subprojects/packagefiles/bestsource/: 0001.patch  meson.build
subprojects/packagefiles/bestsource/libp2p/: p2p_api.h
tools/: osx-bundle.sh  win-installer-setup.ps1
(+51 files in other folders)
